--- a/style.css
+++ b/style.css
@@ -34,10 +34,10 @@
   
   a {
     text-decoration: none;
-    color: black;
+    color: #302f2f;
   }
   body {
-    background-image: url("./images/bg.jpg");
+    background-image: url("./images/bg.png");
     background-size: cover;
     background-position: center;
     background-blend-mode: soft-light;
@@ -59,6 +59,7 @@
     left: 22%;
     background-color: transparent;
     z-index: 999;
+    color: #302f2f;
   }
   #intro1:hover ~ #intro2:after {
     content: "Web";
@@ -97,7 +98,7 @@
     max-width: 80%;
     font-size: 20px;
     font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-    color: black;
+    color: #302f2f;
     justify-content: center;
   }
   .pagestyle h2 {
@@ -240,27 +241,7 @@
   .card h6:hover {
     transform: scale(1.02);
   }
-  
-  /*form {
-    margin: 0 20% 5% 20%;
-  }
-  form label {
-    display: block;
-    width: 100px;
-  }
-  form textarea {
-    margin-top: 5px;
-    width: 200px;
-    height: 50px;
-  }
-  form button {
-    color: black;
-    padding: 5px 28px;
-    text-align: center;
-    font-size: 16px;
-    margin: 4px 2px;
-    cursor: pointer;
-  }*/
+
   .icons {
     display: flex;
     position: sticky;
@@ -302,7 +283,7 @@
     background-color: rgb(97, 148, 190);
     border-radius: 6px;
     font-size: 15px;
-    color: black;
+    color: #302f2f;
     font-weight: bold;
     padding: 8px 28px;
     cursor: pointer;
