--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+    scroll-behavior: smooth;
   }
   header nav {
     padding-top: 40px;
@@ -168,6 +169,61 @@
     display: block;
   }
 
+  .card img:hover {
+    box-shadow: 0 0 5px;
+    transform: scale(1.02);
+  }
+  .card h6:hover {
+    transform: scale(1.02);
+  }
+
+  .icons {
+    display: flex;
+    position: sticky;
+    top: 0;
+    align-self: flex-start;
+    background-color: transparent;
+  }
+  .intropage {
+    height: auto;
+    overflow: visible;
+  }
+  .icons ul {
+    list-style-type: none;
+    margin: 500px 0 3px 3px;
+  }
+  
+  form {
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: left;
+    margin: 0 45% 10% 45%;
+  }
+  form label {
+    margin: 10px;
+    width: 200px;
+    font-weight: bold;
+  }
+  form input {
+    margin: 10px;
+    width: 400px;
+    height: 30px;
+  }
+  form textarea {
+    margin: 10px;
+    width: 400px;
+    height: 100px;
+  }
+  button {
+    margin: 20px;
+    background-color: rgb(97, 148, 190);
+    border-radius: 6px;
+    font-size: 15px;
+    color: #302f2f;
+    font-weight: bold;
+    padding: 8px 28px;
+    cursor: pointer;
+  }
+
   /* media queries are used to resize the profile picture, to respond to different viewport*/
   @media screen and (max-width: 768px) {
     * {
@@ -235,57 +291,4 @@
       margin-top: 0;
     }
   }
-  .card img:hover {
-    box-shadow: 0 0 5px;
-    transform: scale(1.02);
-  }
-  .card h6:hover {
-    transform: scale(1.02);
-  }
-
-  .icons {
-    display: flex;
-    position: sticky;
-    top: 0;
-    align-self: flex-start;
-    background-color: transparent;
-  }
-  .intropage {
-    height: auto;
-    overflow: visible;
-  }
-  .icons ul {
-    list-style-type: none;
-    margin: 500px 0 3px 3px;
-  }
   
-  form {
-    font-family: Arial, Helvetica, sans-serif;
-    text-align: left;
-    margin: 0 45% 10% 45%;
-  }
-  form label {
-    margin: 10px;
-    width: 200px;
-    font-weight: bold;
-  }
-  form input {
-    margin: 10px;
-    width: 400px;
-    height: 30px;
-  }
-  form textarea {
-    margin: 10px;
-    width: 400px;
-    height: 100px;
-  }
-  button {
-    margin: 20px;
-    background-color: rgb(97, 148, 190);
-    border-radius: 6px;
-    font-size: 15px;
-    color: #302f2f;
-    font-weight: bold;
-    padding: 8px 28px;
-    cursor: pointer;
-  }
